Corrige el nombre en el encabezado y agrega estilos generales para la aplicación web.

--- a/Semana 2/index.html
+++ b/Semana 2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Desarrollo de app Web  Bevy</h1>
+    <h1>Desarrollo de app Web  Beivy </h1>
 </body>
 </html>
